[gd_scene load_steps=5 format=3 uid="uid://cakv2jj02co51"]

[ext_resource type="PackedScene" uid="uid://dyngbwnxwg8rd" path="res://Balls/ball_spitter.tscn" id="1_pmlyh"]
[ext_resource type="Script" path="res://Balls/Golfers/first_golfer.gd" id="2_54e06"]
[ext_resource type="Texture2D" uid="uid://cntlry5hk3a72" path="res://assets/art/Golfer_chan.png" id="3_uuk03"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ihlhb"]

[node name="First Golfer" instance=ExtResource("1_pmlyh")]
script = ExtResource("2_54e06")
golfer_sprites = Array[CompressedTexture2D]([ExtResource("3_uuk03")])

[node name="Shot_Timer" parent="." index="0"]
autostart = false

[node name="CameraTimer" type="Timer" parent="." index="7"]
wait_time = 1.5
one_shot = true

[node name="Area3D2" type="Area3D" parent="." index="9"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0686874, 0.559813, 0)
shape = SubResource("CapsuleShape3D_ihlhb")

[connection signal="timeout" from="CameraTimer" to="." method="_on_camera_timer_timeout"]
[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered2"]
